chore(NATE-064): 📘 Update scripts and configurations for improved clarity and functionality
